tests/e2e/fail/extend_mismatched_array.ep
# COMPILE_ERROR: extend requires matching array types, got u16[] and u32[]
fun main(): void {
    let dst = new u16[]
    let src = new u32[]
    extend(dst, src)
}
